--- a/style.css
+++ b/style.css
@@ -5,14 +5,15 @@
 }
 div {
     display: flex;
-    justify-content: center;
     margin: 10px auto;
+    flex-direction: column;
+    align-items: center;
 }
 body {
     background-color: grey;
 }
 button {
-    margin: 0 5px;
+    margin: 7px 5px;
     padding: 5px;
 }
 label {
